chore: fix spacing

--- a/data/style.css
+++ b/data/style.css
@@ -1,9 +1,5 @@
 @define-color dimmed_color alpha(currentColor, .55);
 
-.large-button {
-  padding: 12px;
-}
-
 .drag-overlay-status-page {
   background-color: alpha(@accent_bg_color, 0.5);
   color: @accent_fg_color;
